Complish the card or cardSet list.

--- a/components/Card/Card.wxss
+++ b/components/Card/Card.wxss
@@ -1,43 +1,50 @@
 /* components/card/card.wxss */
 .card {
     width: 340rpx;
+    height: 400rpx;
     font-size: 36rpx;
     color: #777;
     background: #FFF;
     border-radius: 15rpx;
     box-shadow: 100rpx 0 100rpx 10rpx #EEE;
+    overflow: hidden;
 }
 
 .position {
     position: relative;
-    top: 40rpx;
+    top: 0rpx;
     width: 80rpx;
     height: 80rpx;
 }
 
-
 .image {
+    margin-top: -50rpx;
     width: 340rpx;
-    height: 210rpx;
+    height: 400rpx;
     border-radius: 15rpx;
 }
 
+.mask {
+    width: 340rpx;
+    height: 400rpx;
+    z-index: 9999;
+    top: -541rpx;
+    opacity: 0.3;
+    position: relative;
+    background-color: #fff;
+}
+
 .card-title {
-    margin: 5rpx 20rpx;
+    /*margin: 5rpx 20rpx;*/
     font-size: 36rpx;
     font-weight: bold;
-    display: -webkit-box;
-    overflow: hidden;
-    word-wrap: break-word;
-    word-break: break-all;
-    text-overflow: ellipsis;
+    position: relative;
     height: 70rpx;
-    weight: 80rpx;
+    top: -140rpx;
+    left: 20rpx;
+    color: black;
     display: inline-block;
     line-height: 48rpx;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    text-align: left;
 }
 
 .card-finish {
@@ -50,7 +57,10 @@
 }
 
 .deadline-box {
-    margin: 7rpx 20rpx;
+    position: relative;
+    height: 70rpx;
+    top: -140rpx;
+    left: 20rpx;
     padding-bottom: 10rpx;
     font-size: 28rpx;
     width: 340rpx;
@@ -61,17 +71,7 @@
     text-align: left;
     width: 340rpx;
     font-weight: bold;
-    color: #666;
+    color: black;
     margin-top: -15rpx;
 }
 
-.teacher {
-    width: 125rpx;
-    text-align: right;
-    margin-right: 25rpx;
-    overflow: hidden;
-    word-wrap: break-word;
-    height: 44rpx;
-    line-height: 44rpx;
-    float: right;
-}
