--- a/components/Card/Card.wxml
+++ b/components/Card/Card.wxml
@@ -4,9 +4,10 @@
     <tag  wx:else mark type="warning" class="position">未完成</tag>
     <image src="/media/img/1.jpg" class="image"></image>
     <view class="card-title">{{title}}</view>
-    <view wx:if="{{finish}}" class="card-finish">完成</view>
-    <view wx:else class="card-finish">未完成</view>
+<!--    <view wx:if="{{finish}}" class="card-finish">完成</view>-->
+<!--    <view wx:else class="card-finish">未完成</view>-->
     <view class="deadline-box">
         <view class="deadline">{{deadline}}</view>
     </view>
+    <view class="mask"></view>
 </view>
