Basically implement the function of search and modify some content in userinfo.

--- a/components/Search/Search.wxml
+++ b/components/Search/Search.wxml
@@ -1,1 +1,9 @@
-<view>{{}}</view>
+<view>
+  <van-search
+    model:value="{{value}}"
+    shape="round"
+    placeholder="请输入搜索关键词"
+    bind:search="onSearch"
+    bind:clear="onClear"
+  />
+</view>
