--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -1,3 +1,3 @@
-<UserInfo name="{{name}}" gender="{{gender}}" avatar="{{avatar}}">
+<UserInfo name="{{name}}" gender="{{gender}}" avatar="{{avatar}}" signature="{{signature}}">
 
 </UserInfo>
