--- a/components/Screen/Screen.wxml
+++ b/components/Screen/Screen.wxml
@@ -1,5 +1,7 @@
 <!--components/Screen/Screen.wxml-->
-<van-dropdown-menu>
-    <van-dropdown-item value="{{ value1 }}" options="{{ option1 }}"/>
-    <van-dropdown-item value="{{ value2 }}" options="{{ option2 }}"/>
+<van-dropdown-menu class="dropdown-menu">
+    <van-dropdown-item value="{{ value1 }}" options="{{ option1 }}" bind:change = "onChange"/>
 </van-dropdown-menu>
+<!--<van-dropdown-menu class="dropdown-menu">-->
+<!--    <van-dropdown-item value="{{ value2 }}" options="{{ option2 }}" bind:change = "onChange"/>-->
+<!--</van-dropdown-menu>-->
