Add about help statistics page and modify UserInfo and Search.

--- a/components/Search/Search.wxml
+++ b/components/Search/Search.wxml
@@ -5,5 +5,8 @@
     placeholder="请输入搜索关键词"
     bind:search="onSearch"
     bind:clear="onClear"
+    bind:focus="onFoucus"
+    bind:blur="onBlur"
+    bind:input="Oninput"
   />
 </view>
