--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -1,3 +1,11 @@
+<page-meta>
+    <navigation-bar
+      title="关于"
+      loading="{{false}}"
+      background-color="#fcfcfc"
+      front-color="#000000"
+    />
+</page-meta>
 <view class="all">
     <view class="top">
         <van-image
@@ -7,9 +15,13 @@
             height="150"
             round="{{ true }}"
         />
+        <view class="name">WaterDrop</view>
+        <view class="tip">点击保存二维码图片</view>
     </view>
-    <view class="about-info">
-        <view class="title">{{title}}</view>
-        <view class="content">{{content}}</view>
+    <view class="about-info-background {{extra}}">
+        <view class="about-info">
+            <view class="title">{{title}}</view>
+            <view class="content">{{content}}</view>
+        </view>
     </view>
 </view>
