--- a/pages/about/about.wxss
+++ b/pages/about/about.wxss
@@ -1,25 +1,31 @@
 .title {
-    font-family: Georgia,sans-serif,fantasy;
+    font-family: sans-serif,fantasy,Georgia;
     font-size: 35rpx;
-    font-weight: 100;
-    margin-bottom: 40rpx;
-
-
+    font-weight: 500;
+    margin-bottom: 25rpx;
+    margin-top: 30rpx;
 }
 
 .content {
-    font-family: Georgia,sans-serif,fantasy;
-    font-size:28rpx;
+    font-family: sans-serif,fantasy,Georgia;
+    font-size:32rpx;
     font-weight: 100;
+}
 
+.about-info-background {
+    display:flex;
+    justify-content: center;
+    background-color: #FAFAFA;
+    overflow: hidden;
+    height: 50%;
+    position: absolute;
+    top: 50%;
 }
 
 .about-info {
     display: block;
-    padding: 20rpx 40rpx 0 40rpx;
-    background-color: #FAFAFA;
-    height:500rpx;
-    width:100%;
+    padding: 20rpx 0 0 0;
+    width:85%;
     word-spacing: 0.6em;
     line-height: 1.5em;
     word-wrap: break-word;
@@ -31,8 +37,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height:600rpx;
+    flex-direction: column;
+    height: 50%;
     width:100%;
+    position: absolute;
+    top: 0;
+    bottom: 50%;
 }
 
 .img {
@@ -42,4 +52,23 @@
 
 .all {
     width:100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+}
+
+.tip {
+    font-size: 22rpx;
+    font-weight: 100;
+    margin-top: 25rpx;
+    font-family: sans-serif,fantasy,Georgia;
+}
+
+.name {
+    font-family: sans-serif,fantasy,Georgia;
+    font-size:28rpx;
+    font-weight: 100;
+    color: paleturquoise;
+    margin-top: 50rpx;
 }
