--- a/pages/cardmarket/cardmarket.wxml
+++ b/pages/cardmarket/cardmarket.wxml
@@ -1,3 +1,11 @@
+<page-meta>
+    <navigation-bar
+        title="Water Drop"
+        loading="{{false}}"
+        background-color="#FCFCFC"
+        front-color="#000"
+    />
+</page-meta>
 <view>
 
 </view>
