--- a/pages/feedback/feedback.wxml
+++ b/pages/feedback/feedback.wxml
@@ -1,3 +1,11 @@
+<page-meta>
+    <navigation-bar
+        title="吐槽"
+        loading="{{false}}"
+        background-color="#fcfcfc"
+        front-color="#000000"
+    />
+</page-meta>
 <view>
     <van-cell-group>
         <van-field
