--- a/pages/message/message.wxml
+++ b/pages/message/message.wxml
@@ -1,3 +1,11 @@
+<page-meta>
+    <navigation-bar
+        title="消息"
+        loading="{{false}}"
+        background-color="#fcfcfc"
+        front-color="#000000"
+    />
+</page-meta>
 <view>
 
 </view>
