--- a/pages/test/test.wxml
+++ b/pages/test/test.wxml
@@ -1,5 +1,12 @@
 <!--pages/test/test.wxml-->
-
+<page-meta>
+    <navigation-bar
+        title="Water Drop"
+        loading="{{false}}"
+        background-color="#fcfcfc"
+        front-color="#000000"
+    />
+</page-meta>
 <Search></Search>
 <CardList cardlist="{{cardlist}}">
 
