--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -1,3 +1,11 @@
+<page-meta>
+    <navigation-bar
+        title="Water Drop"
+        loading="{{false}}"
+        background-color="#fcfcfc"
+        front-color="#000000"
+    />
+</page-meta>
 <UserInfo name="{{name}}" gender="{{gender}}" avatar="{{avatar}}" signature="{{signature}}">
 
 </UserInfo>
