--- a/components/UserInfo/UserInfo.wxss
+++ b/components/UserInfo/UserInfo.wxss
@@ -6,7 +6,10 @@
     overflow:hidden;
 }
 .img {
-
+    border-radius: 100%;
+    border: 10rpx solid #FFFFFF;
+    width: 90px;
+    height: 90px;
 }
 
 .avatar-style {
@@ -16,24 +19,20 @@
     width: 100%;
     height: 400rpx;
     flex-direction: column;
-    background-color: #FAFAFA;
+    /*background: linear-gradient(91deg,#f1eefc,#9dc6ff 70%,#a5bcff);*/
+    /*background-image: linear-gradient(to right, #4bb0ff, #6149f6);*/
+    /*background-image: linear-gradient(to top, #fad0c4 0%, #fad0c4 1%, #ffd1ff 100%);*/
+    /*background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);*/
+    /*background-image: linear-gradient(to left bottom, #accbee 0%, #e7f0fd 100%);*/
+    /*background-image: linear-gradient(to right top, #c1dfc4 0%, #deecdd 100%);*/
+    /*background-image: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%); !* 仁慈而又坚强 *!*/
+    /*background-image: linear-gradient(to right top, #9795f0 0%, #fbc8d4 100%);!* 59 *!*/
+    background-image: linear-gradient(to left top, #a8edea 0%, #fed6e3 100%);/* 23 */
 }
 .nick-name {
     font-family: sans-serif,fantasy,Georgia;
     font-size: 35rpx;
     font-weight: 500;
     word-spacing: 0.4em;
-    margin-top: 10rpx;
+    padding-top: 20rpx;
 }
-
-/*.blanking {*/
-/*    display: block;*/
-/*    background-color: #FCFCFC;*/
-/*    height: 20rpx;*/
-/*}*/
-/*.user-name {*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*}*/
