--- a/pages/feedback/feedback.wxml
+++ b/pages/feedback/feedback.wxml
@@ -6,17 +6,57 @@
         front-color="#000000"
     />
 </page-meta>
-<view>
-    <van-cell-group>
-        <van-field
-          value="{{ feedback_content }}"
-          placeholder="请输入留言"
-          maxlength="300"
-          show-word-limit
-          type="textarea"
-          rows="1"
-          autosize
-          border="{{ false }}"
-          clearable />
-    </van-cell-group>
+<view class="all">
+    <view class="top">
+        请选择你要反馈的内容
+    </view>
+    <van-radio-group
+        value="{{ radio1 }}"
+        data-key="radio1"
+        bind:change="onChange"
+    >
+        <van-radio name="1" icon-size="14px" custom-class="demo-radio">页面异常，卡顿或显示错误</van-radio>
+        <van-divider class="divider"></van-divider>
+        <van-radio name="2" icon-size="14px" custom-class="demo-radio">在卡片市场搜不到想要的卡片</van-radio>
+        <van-divider class="divider"></van-divider>
+        <van-radio name="3" icon-size="14px" custom-class="demo-radio">卡片样式单一，风格不新颖</van-radio>
+        <van-divider class="divider"></van-divider>
+        <van-radio name="4" icon-size="14px" custom-class="demo-radio">数据图表显示错误</van-radio>
+        <van-divider class="divider"></van-divider>
+        <van-radio name="5" icon-size="14px" custom-class="demo-radio">其他</van-radio>
+        <van-divider class="divider"></van-divider>
+    </van-radio-group>
+    <view class="middle">
+        请填写你要反馈的内容
+    </view>
+    <view class="all-field">
+        <van-cell-group>
+            <van-field
+                model:value="{{ content }}"
+                placeholder="描述越详细，越容易得到解决"
+                type="textarea"
+                rows="4"
+                autosize
+                border="{{ true }}"
+                class="custom-field"
+            />
+        </van-cell-group>
+    </view>
+    <view class="submit">
+        <van-button
+            wx:if="{{ !content }}"
+            color="linear-gradient(to right, #4bb0ff, #6149f6)"
+            type="primary"
+            block
+            disabled
+        >提交</van-button>
+        <van-button
+            wx:else
+            color="linear-gradient(to right, #4bb0ff, #6149f6)"
+            bind:click="onClickConfirm"
+            type="primary"
+            block
+        >提交</van-button>
+        <van-dialog id="van-dialog" />
+    </view>
 </view>
